--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
 
     testOptions.unitTests {
         includeAndroidResources = true
+        returnDefaultValues = true
     }
 
     packagingOptions {
@@ -117,4 +118,8 @@ dependencies {
     androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:$dexMakerVersion"
 
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
+
+    androidTestImplementation "androidx.arch.core:core-testing:$archTestingVersion"
+
+    implementation "androidx.test.espresso:espresso-idling-resource:$espressoVersion"
 }
